--- a/ux.html
+++ b/ux.html
@@ -41,12 +41,16 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.smartrecruiters.com/IBIGroup/743999698317746-ux-ui-designer'>IBI Group UX/UI Designer | SmartRecruiters</a></h5> 
+<h5><a href='https://boards.greenhouse.io/twitch/jobs/4498252002'>Job Application for UX Designer at Twitch</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
+<h5><a href='https://jobs.smartrecruiters.com/IBIGroup/743999698317746-ux-ui-designer'>IBI Group UX/UI Designer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Burnaby Canada</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://producthire.net/job/ux-designer-11/'>UX Designer | PRODUCTHIRE.NET</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/americaatwork/78d28061-9592-4edb-8897-63fdfa968fb1'>America At Work - Sr. Consultant, UX Innovation Researcher</a></h5> 
@@ -145,7 +149,7 @@
 <p><span class="badge badge-light">New York, NY United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://finleap.recruitee.com/o/senior-uxui-designer-fmdiv-for-a-new-finleap-venture'>
+<h5><a href='https://finleap.recruitee.com/o/senior-uxui-designer-fmdiv-for-a-new-finleap-venture'>
       Senior UX/UI Designer (f/m/div) for a new finleap venture - FinLeap GmbH
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Germany  Berlin</span></p>
@@ -191,7 +195,7 @@
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/amedigital/jobs/4499505002'>Job Application for UX Research at Ame Digital</a></h5> 
+<h5><a href='https://boards.greenhouse.io/amedigital/jobs/4499505002'>Job Application for UX Research at Ame Digital</a></h5> 
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -261,7 +265,7 @@
 <p><span class="badge badge-light">London London</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=o9HIafws&__jvst=Employee+Referral&__jvsd=s2yligwY&__jvsc=Twitter&bid=nTGfoMwt'>Jobvite, Inc. Careers - Senior UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=o9HIafws&__jvst=Employee+Referral&__jvsd=s2yligwY&__jvsc=Twitter&bid=nTGfoMwt'>Jobvite, Inc. Careers - Senior UX Designer</a></h5> 
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -361,7 +365,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://masglobalconsulting.applytojob.com/apply/BAY4lOgMbL/Front-End-DeveloperAngularReactHTML5CSS3UXUI'>Front End Developer(Angular/React/HTML5/CSS3,UX/UI) - MAS Global Consulting - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://masglobalconsulting.applytojob.com/apply/BAY4lOgMbL/Front-End-DeveloperAngularReactHTML5CSS3UXUI'>Front End Developer(Angular/React/HTML5/CSS3,UX/UI) - MAS Global Consulting - Career Page</a></h5> 
 <p><span class="badge badge-light">Tampa, FL Medellin, Colombia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -369,7 +373,7 @@
 <p><span class="badge badge-light">Detroit</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzYaVfwm&k=Job&j=o33DafwD&__jvst=Employee&__jvsd=sqMgXhwb&__jvsc=Twitter&bid=nAFwnMwp'>Brandwatch Careers - Product/UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzYaVfwm&k=Job&j=o33DafwD&__jvst=Employee&__jvsd=sqMgXhwb&__jvsc=Twitter&bid=nAFwnMwp'>Brandwatch Careers - Product/UX Designer</a></h5> 
 <p><span class="badge badge-light">Brighton, England</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -407,7 +411,7 @@
 <p><span class="badge badge-light">Minneapolis, MNUnited States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://coachhub.join.com/jobs/457564-ui-ux-designer-mobile-and-web-apps-m-f-d'>Job @ Coachhub (Berlin): UI/UX Designer ? Mobile &... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://coachhub.join.com/jobs/457564-ui-ux-designer-mobile-and-web-apps-m-f-d'>Job @ Coachhub (Berlin): UI/UX Designer ? Mobile &... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -467,10 +471,6 @@
 <hr/>
 <h5><a href='https://dasauge.de/jobs/stellenangebote/freelancer/e584761'>Stellenangebot: UX / UI Designer (m/w/d) (Hamburg) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light">Hamburg Hamburg</span></p>
-<p>Posted on:: 2019-10-29</p>
-<hr/>
-<h5><a href='https://ontheshortlist.zohorecruit.com/recruit/ViewJob.na?digest=OMxI@vOMIjkz5CDtFyJpJcBdio.pCanMiyrTEJpQk3w-&embedsource=Twitter'>Junior UX Designer</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
 
